feat: report finale, prefissi magazzino e creazione cartelle per item
- OrderItem: aggiunto WarehouseCode e valorizzazione da Service Layer

- ProcessingResult: nuovi campi (Project, ProcessedOrderItems, CreatedDestinationFolders, MissingComponentItemCodes)

- Program: stampa prospetto finale con riepilogo (OI, progetto, cartelle create, conteggi, componenti mancanti)

- FileManagementService/IFileManagementService: creazione cartella ordine estesa con project e warehouseCode; aggiunta logica prefisso magazzino e sottocartella progetto; logging migliorato

- OrderProcessingService: creazione cartella per ogni riga ordine; tracking conteggi e liste; set Project

- SapConfiguration/appsettings.json: aggiunte WarehousePrefixMappings per mappare codice magazzino -> prefisso

--- a/SapOrderFileProcessor/appsettings.json
+++ b/SapOrderFileProcessor/appsettings.json
@@ -17,6 +17,10 @@
       "IT-C00757": "Europroject Intl Inc"
     },
     "DefaultClientFolder": "Adotta Italia Srl",
+    "WarehousePrefixMappings": {
+      "USA": "EU",
+      "003": "ITA"
+    },
     "SearchFolders": [
       "\\\\192.168.100.23\\pubblica\\DEV\\MASTER-PROD\\FILES-PROD (R&D-AG)",
       "\\\\192.168.100.23\\pubblica\\DEV\\MASTER-PROD\\PROJECTS (UTP)"
