--- a/SapOrderFileProcessor/appsettings.json
+++ b/SapOrderFileProcessor/appsettings.json
@@ -18,8 +18,8 @@
     },
     "DefaultClientFolder": "Adotta Italia Srl",
     "WarehousePrefixMappings": {
-      "USA": "EU",
-      "003": "ITA"
+      "USA": "US",
+      "003": "IT"
     },
     "SearchFolders": [
       "\\\\192.168.100.23\\pubblica\\DEV\\MASTER-PROD\\FILES-PROD (R&D-AG)",
